fix: Replace .collect(Collectors.toList()) with .toList() to resolve S6204 Sonar findings
Co-authored-by: arassec <14818006+arassec@users.noreply.github.com>